# parallel_validator

./: .gitignore  ParallelValidator  ParallelValidator.cabal  Producer  Worker
src/: Main.hs
src/producer/: Main.hs
src/worker/: Main.hs
