name:                ParallelValidator
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license:             AllRightsReserved
author:              Alex Babkin
maintainer:          ababkin@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable ParallelValidator
  hs-source-dirs: src
  main-is:        Main.hs
  ghc-options:    -O2 -Wall -static
  -- -threaded -with-rtsopts=-N1
  build-depends:
      base >= 4 && <= 5
    , process

